--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="#">About Us</a>
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown  active">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Courses
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <div class="dropdown-menu  active" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="#">Web Development</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Machine Learning</a>
@@ -44,30 +44,28 @@
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Software Development</a>
                     </div>
-
-
                 </li>
-                <li class="nav-item">
+                <li class="nav-item  active">
                     <a class="nav-link" href="#">Contact Us</a>
                 </li>
             </ul>
         </div>
     </nav>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <!-- <ol class="carousel-indicators">
+        <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol> -->
+        </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" src="./images/4.webp" alt="First slide">
+                <img class="d-block w-100" src="./images/b1.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="./images/2.webp" alt="Second slide">
+                <img class="d-block w-100" src="./images/b2.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="./images/3.webp" alt="Third slide">
+                <img class="d-block w-100" src="./images/b3.jpg" alt="Third slide">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -79,10 +77,10 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
-    <section class="py-3">
+    <section class="py-5">
         <div class="container">
             <h2 class="text-center">POPULAR COURSES</h2>
-            <ul class="nav nav-pills mb-3" id=" pills-tab justify-content-center" role="tablist">
+            <ul class="nav nav-pills my-3" id=" pills-tab justify-content-center" role="tablist">
                 <li class="nav-item text-center">
                     <a class="nav-link active brds0" id="pills-webdev-tab" data-toggle="pill" href="#pills-webdev"
                         role="tab" aria-controls="pills-webdev" aria-selected="true">Web Development</a>
@@ -134,6 +132,9 @@
                                 <button class="btn btn-primary inline-block w-100">Register Now</button>
                             </div>
                         </div>
+                    </div>
+                    <div>
+                        <h5 class="text-center mt-4"><a href="#">View All Course</a></h5>
                     </div>
                 </div>
                 <div class="tab-pane fade" id="pills-ml" role="tabpanel" aria-labelledby="pills-ml-tab">
@@ -206,11 +207,11 @@
     </section>
 
 
-    <sectiion id="Testimonials">
-        <div class="container my-3">
+    <div id="Testimonials" style="background-color: #f1f1f1;">
+        <div class="container py-5">
             <h2 class="text-center">STUDENT TESTIMONIALS</h2>
-            <div class="owl-carousel owl-theme">
-                <div class="item border p-3 text-center">
+            <div class="owl-carousel owl-theme my-3">
+                <div class="item border p-3 text-center bg-white">
                     <figure class="m-auto">
                         <img class="border" src="./images/1.jpg"
                             style="width: 80px; height: 80px; border-radius: 100%; padding:5px;">
@@ -220,7 +221,7 @@
                             adipisci aut quibusdam quo ex cum minima eligendi?</p>
                     </figure>
                 </div>
-                <div class="item border p-3 text-center">
+                <div class="item border p-3 text-center  bg-white">
                     <figure class="m-auto">
                         <img class="border" src="./images/1.jpg"
                             style="width: 80px; height: 80px; border-radius: 100%; padding:5px;">
@@ -230,7 +231,7 @@
                             adipisci aut quibusdam quo ex cum minima eligendi?</p>
                     </figure>
                 </div>
-                <div class="item border p-3 text-center">
+                <div class="item border p-3 text-center  bg-white">
                     <figure class="m-auto">
                         <img class="border" src="./images/1.jpg"
                             style="width: 80px; height: 80px; border-radius: 100%; padding:5px;">
@@ -252,72 +253,72 @@
                 </div>
             </div>
         </div>
-    </sectiion>
-    <footer class="bg-dark py-3">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3 text-white">
-                    <h5>E-Learning</h5>
-                    <span>Email:elearning@gmail.com</span><br />
-                    <span>Mob. no.: 999 888 7777</span><br />
-                    <div class="d-flex justify-content-between mt-3">
-                        <i class="fa fa-facebook"></i>
-                        <i class="fa fa-twitter"></i>
-                        <i class="fa fa-youtube"></i>
-                        <i class="fa fa-instagram"></i>
+        </sectiion>
+        <footer class="bg-dark py-3">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3 text-white">
+                        <h5>E-Learning</h5>
+                        <span>Email:elearning@gmail.com</span><br />
+                        <span>Mob. no.: 999 888 7777</span><br />
+                        <div class="d-flex justify-content-between mt-3">
+                            <i class="fa fa-facebook"></i>
+                            <i class="fa fa-twitter"></i>
+                            <i class="fa fa-youtube"></i>
+                            <i class="fa fa-instagram"></i>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-3 text-white">
-                    <h5>Courses</h5>
-                    <ul>
-                        <li>All Courses</li>
-                        <li>Web Development</li>
-                        <li>Software Development</li>
-                        <li>Devops Developer</li>
-                    </ul>
-                </div>
-                <div class="col-md-3 text-white">
-                    <h5>Quick Links</h5>
-                    <ul>
-                        <li>Blog</li>
-                        <li>Customer Support</li>
-                        <li>Terms & Conditions</li>
-                        <li>Course FAQ's</li>
-                    </ul>
-                </div>
-                <div class="col-md-3 text-white">
-                    <h5>Newsletter</h5>
-                    <input type="text" class="form-control" placeholder="Email Address">
-                    <div class="mt-3">
-                        <button class="btn btn-success ">Subscribe</button>
+                    <div class="col-md-3 text-white">
+                        <h5>Courses</h5>
+                        <ul>
+                            <li>All Courses</li>
+                            <li>Web Development</li>
+                            <li>Software Development</li>
+                            <li>Devops Developer</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3 text-white">
+                        <h5>Quick Links</h5>
+                        <ul>
+                            <li>Blog</li>
+                            <li>Customer Support</li>
+                            <li>Terms & Conditions</li>
+                            <li>Course FAQ's</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3 text-white">
+                        <h5>Newsletter</h5>
+                        <input type="text" class="form-control" placeholder="Email Address">
+                        <div class="mt-3">
+                            <button class="btn btn-success ">Subscribe</button>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </footer>
-    <script src="./js/jquery.js"></script>
-    <script src="./js/proper.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-    <script src="./js/owl.carousel.js"></script>
-    <script src="./js/owl.carousel.min.js"></script>
-    <script>
-        $('.owl-carousel').owlCarousel({
-            loop: true,
-            margin: 10,
-            nav: false,
-            responsive: {
-                0: {
-                    items: 1
-                },
-                600: {
-                    items: 2
-                },
-                1000: {
-                    items: 3
+        </footer>
+        <script src="./js/jquery.js"></script>
+        <script src="./js/proper.js"></script>
+        <script src="./js/bootstrap.min.js"></script>
+        <script src="./js/owl.carousel.js"></script>
+        <script src="./js/owl.carousel.min.js"></script>
+        <script>
+            $('.owl-carousel').owlCarousel({
+                loop: true,
+                margin: 10,
+                nav: false,
+                responsive: {
+                    0: {
+                        items: 1
+                    },
+                    600: {
+                        items: 2
+                    },
+                    1000: {
+                        items: 3
+                    }
                 }
-            }
-        })
-    </script>
+            })
+        </script>
 </body>
 
 </html>
